# LoD-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
.github/workflows/: docker.yaml
src/: db.rs  main.rs
src/models/: code.rs  mod.rs  prelude.rs
src/req/: code.rs  mod.rs
src/routes/: mod.rs  pastebin.rs
