[package]
name = "lod-backend"
authors = ["duskmoon (Campbell He) <campbell.he@icloud.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket", version = "0.5.0-rc.1", features = [
    "json",
    "uuid",
] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", version = "0.1.0-rc", features = [
    "sqlx_postgres",
] }
sea-orm = { version = "0.2", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v5", "serde"] }
